# gspreadsheet-wrapper

./: .gitignore  README.md  setup.cfg
source/gspreadsheet/: __init__.py  gservice.py  gspreadsheets.py  spreadsheet.py
