[metadata]
name = PACKAGENAME
version = 0.0.0
author = Kirill Lapushinskiy
author_email = kirilllapushinskiy@yahoo.com
description = Description of PACKAGENAME
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kirilllapushinskiy/PACKAGENAME
project_urls =
    Bug Tracker = https://github.com/kirilllapushinskiy/PACKAGENAME/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.6

[options.packages.find]
where = source
